<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="net.g33kworld.smsdump.SMSDump">

    <item android:id="@+id/actionLoad"
        android:title="@string/actionLoad"
        android:icon="@drawable/ic_refresh"
        app:showAsAction="always" />

    <item android:id="@+id/actionSave"
        android:title="@string/actionSave"
        android:icon="@drawable/ic_save"
        app:showAsAction="always" />

    <item android:id="@+id/actionEmail"
        android:title="@string/actionEmail"
        android:icon="@drawable/ic_email"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/actionUpload"
        android:title="@string/actionUpload"
        android:icon="@drawable/ic_file_upload"
        app:showAsAction="ifRoom" />

    <item android:id="@+id/actionSettings"
        android:title="@string/actionSettings"
        android:icon="@drawable/ic_settings"
        app:showAsAction="ifRoom" />

</menu>
